<resources>
    <string name="app_name">Shop Application</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="passwordAgain">Password Again</string>
    <string name="phoneNumber">Phone number</string>
    <string name="address">Address</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>
    <string name="product_description">Product Description\n</string>
    <string name="login_as_guest">Login as guest</string>
    <string name="login_with_google">Login with Google</string>
    <string name="item_description">Description</string>
    <string name="item_info_placeholder">Information about the item</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="layout">Layout</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="delete">Delete from cart</string>
    <string-array name="phoneModes">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string-array name="shopping_item_names">
        <item>Smart Phone</item>
        <item>Tablet</item>
        <item>Gaming PC</item>
        <item>Oled TV</item>
        <item>Bicycle</item>
        <item>Lego</item>
        <item>Costume</item>
        <item>Sport tools</item>
        <item>Kitchen tools</item>
        <item>Furniture</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>This is a smart phone!</item>
        <item>This is a tablet!</item>
        <item>This is a gamer pc!</item>
        <item>This is a OLED TV!</item>
        <item>This is a bicycle!</item>
        <item>This is a lego!</item>
        <item>This is a costume!</item>
        <item>These are sport tools!</item>
        <item>These are kithcen tools!</item>
        <item>This is a furniture!</item>
    </string-array>

    <array name="shopping_item_rates">
        <item>3.5</item>
        <item>5</item>
        <item>4</item>
        <item>1.5</item>
        <item>5</item>
        <item>3</item>
        <item>4.5</item>
        <item>4</item>
        <item>5</item>
        <item>2.5</item>
    </array>

    <array name="shopping_item_images">
        <item>@drawable/smart_phone</item>
        <item>@drawable/tablet</item>
        <item>@drawable/pc</item>
        <item>@drawable/oled_tv</item>
        <item>@drawable/bike</item>
        <item>@drawable/lego</item>
        <item>@drawable/custome</item>
        <item>@drawable/sport_tools</item>
        <item>@drawable/kitchen</item>
        <item>@drawable/furniture</item>
    </array>

    <array name="shopping_item_price">
        <item>100 Dv</item>
        <item>150 Dv</item>
        <item>500 Dv</item>
        <item>300 Dv</item>
        <item>180 Dv</item>
        <item>70 Dv</item>
        <item>20 Dv</item>
        <item>30 Dv</item>
        <item>15 Dv</item>
        <item>90 Dv</item>
    </array>
</resources>