<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/search_bar"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:visible="true"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/cart"
        app:actionLayout="@layout/custom_menu_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/view_selector"
        android:icon="@drawable/ic_view_grid"
        android:title="@string/layout"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/log_out_button"
        android:icon="@drawable/ic_exit"
        android:orderInCategory="2"
        android:title="@string/logout"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings_button"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="1"
        android:title="@string/settings"
        android:visible="true"
        app:showAsAction="never" />
</menu>